subida por defecto

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
+  <button class="blabla">Iniciar sesión</button>
   <script type="module" src="main.js"></script>
+  
 </body>
 </html>
