--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,9 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="root"></div>
 
-  <script type="module" src="main.js"></script>
+  <script type="module" src="controllers/main.js"></script>
   
 </body>
 </html>
